[gd_scene load_steps=2 format=3 uid="uid://dpr3jxqx8jtuc"]

[ext_resource type="Script" path="res://start_menu.gd" id="1_w3lgf"]

[node name="StartMenu" type="CenterContainer"]
offset_left = 16.0
offset_top = 16.0
offset_right = 304.0
offset_bottom = 164.0
script = ExtResource("1_w3lgf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start Game"

[node name="QuitGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
